WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
109700
[chromium] fix TestRunner build with enable_webrtc=0
https://bugs.webkit.org/show_bug.cgi?id=109700
Summary
[chromium] fix TestRunner build with enable_webrtc=0
jochen
Reported
2013-02-13 08:19:22 PST
[chromium] fix TestRunner build with enable_webrtc=0
Attachments
Patch
(7.11 KB, patch)
2013-02-13 08:20 PST
,
jochen
no flags
Details
Formatted Diff
Diff
Patch for landing
(7.09 KB, patch)
2013-02-13 10:58 PST
,
jochen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
jochen
Comment 1
2013-02-13 08:20:03 PST
Created
attachment 188084
[details]
Patch
Tommy Widenflycht
Comment 2
2013-02-13 08:56:46 PST
Comment on
attachment 188084
[details]
Patch Nice!
Tony Chang
Comment 3
2013-02-13 10:37:03 PST
Comment on
attachment 188084
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=188084&action=review
> Tools/DumpRenderTree/chromium/TestRunner/src/MockWebRTCPeerConnectionHandler.cpp:33 > +#if defined(ENABLE_WEBRTC)
Why is some of this defined(ENABLE_WEBRTC) and some ENABLE_WEBRTC? Should we #define ENABLE in config.h?
jochen
Comment 4
2013-02-13 10:58:59 PST
Created
attachment 188122
[details]
Patch for landing
jochen
Comment 5
2013-02-13 11:00:13 PST
(In reply to
comment #3
)
> (From update of
attachment 188084
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=188084&action=review
> > > Tools/DumpRenderTree/chromium/TestRunner/src/MockWebRTCPeerConnectionHandler.cpp:33 > > +#if defined(ENABLE_WEBRTC) > > Why is some of this defined(ENABLE_WEBRTC) and some ENABLE_WEBRTC? > Should we #define ENABLE in config.h?
ah, that was an omission. I decided not to use an ENABLE() macro, as TestRunner only sees the defines from base/common.gypi, and they have different names than the ones in features.gypi, so I concluded that this was confusing.
Adam Barth
Comment 6
2013-02-13 12:01:26 PST
Comment on
attachment 188122
[details]
Patch for landing View in context:
https://bugs.webkit.org/attachment.cgi?id=188122&action=review
> Tools/DumpRenderTree/chromium/TestRunner/src/MockConstraints.cpp:33 > +#if ENABLE_WEBRTC
nit: We usually have a blank line after these sorts of lines.
WebKit Review Bot
Comment 7
2013-02-13 13:48:43 PST
Comment on
attachment 188122
[details]
Patch for landing Clearing flags on attachment: 188122 Committed
r142790
: <
http://trac.webkit.org/changeset/142790
>
WebKit Review Bot
Comment 8
2013-02-13 13:48:47 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug