[chromium] fix TestRunner build with enable_webrtc=0 https://bugs.webkit.org/show_bug.cgi?id=109700

Reviewed by Tony Chang.

We can't use ENABLE() macros in the TestRunner library, however,
ENABLE_WEBRTC is defined by build/common.gypi, so we can use it.

* DumpRenderTree/chromium/TestRunner/src/MockConstraints.cpp:
* DumpRenderTree/chromium/TestRunner/src/MockWebMediaStreamCenter.cpp:
* DumpRenderTree/chromium/TestRunner/src/MockWebRTCDTMFSenderHandler.cpp:
* DumpRenderTree/chromium/TestRunner/src/MockWebRTCDataChannelHandler.cpp:
* DumpRenderTree/chromium/TestRunner/src/MockWebRTCPeerConnectionHandler.cpp:
* DumpRenderTree/chromium/TestRunner/src/WebTestInterfaces.cpp:
(WebTestRunner):
* DumpRenderTree/chromium/TestRunner/src/WebTestProxy.cpp:
(WebTestRunner::WebTestProxyBase::userMediaClient):
* DumpRenderTree/chromium/TestRunner/src/WebUserMediaClientMock.cpp:


Canonical link: https://commits.webkit.org/128010@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142790 268f45cc-cd09-0410-ab3c-d52691b4dbfc