Tools/DumpRenderTree/chromium/TestRunner/src/MockWebRTCDTMFSenderHandler.cpp
@@ -24,6 +24,8 @@
  */
 
 #include "config.h"
+
+#if ENABLE_WEBRTC
 #include "MockWebRTCDTMFSenderHandler.h"
 
 #include "WebTestDelegate.h"
@@ -92,3 +94,5 @@ bool MockWebRTCDTMFSenderHandler::insertDTMF(const WebString& tones, long durati
 }
 
 }
+
+#endif // ENABLE_WEBRTC
