Tools/DumpRenderTree/chromium/TestRunner/src/WebUserMediaClientMock.cpp
@@ -29,6 +29,8 @@
  */
 
 #include "config.h"
+
+#if ENABLE_WEBRTC
 #include "WebUserMediaClientMock.h"
 
 #include "MockConstraints.h"
@@ -131,3 +133,5 @@ void WebUserMediaClientMock::cancelUserMediaRequest(const WebUserMediaRequest&)
 }
 
 }
+
+#endif // ENABLE_WEBRTC
